<resources>
    <string name="app_name">Запись к врачу</string>
    <string name="write_to_the_doctor">Написать врачу</string>
    <string name="welcome_app">Добро пожаловать в мобильное приложение для записи к врачу</string>
    <string name="todo">TODO</string>
    <string name="more_vert">More vert</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="experience">Стаж</string>
    <string name="select_a_date">Выберите дату</string>
    <string name="choose_a_specialization">Выберите специализацию</string>
    <string name="choose_a_specialist">Выберите специалиста</string>
    <string name="date_of_receipt">Дата приема</string>
    <string name="user">Пользователь</string>
    <string name="mail">Почта</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="noris">Норис</string>
    <string name="address">Адрес:</string>
    <string name="address_noris">ул. Худайбердина, 101, Стерлитамак</string>
    <string name="working_hours">Время работы:</string>
    <string name="opening_hours_weekdays">Будни  08:00 – 19:00</string>
    <string name="opening_hours_saturday">Суббота  08:00 – 16:00</string>
    <string name="opening_hours_sunday">Воскресенье  Выходной</string>
    <string name="recording_history">История записей</string>
    <string name="your_applications">Здесь будут отображены ваши записи к врачу</string>
    <string name="patient_card">Карта пациента</string>


    <!-- Названия Activity-->
    <string name="сhat_with_a_doctor">Чат с врачом</string>
    <string name="specialization">Специализация</string>
    <string name="service">Услуга</string>
    <string name="specialist">Специалисты</string>
    <string name="free_time">Свободное время</string>
    <string name="services">Услуги</string>


    <!-- Названия Button-->
    <string name="regs">Регистрация</string>
    <string name="auth">Авторизация</string>
    <string name="do_you_have_an_account">У вас есть аккаунт?</string>
    <string name="title_home">Домой</string>
    <string name="title_history">История заявок</string>
    <string name="title_profile">Профиль</string>
    <string name="title_clinic">Клиника</string>
    <string name="settings">Настройки</string>
    <string name="sign_out">Выйти из профиля</string>
    <string name="back">Назад</string>
    <string name="enter">Войти</string>
    <string name="send">Отправить</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="reestablish">Восстановить</string>
    <string name="sign_up">Записаться</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="resend">Отправить повторно</string>
    <string name="call">Позвонить</string>


    <!-- Подсказки в EditText -->
    <string name="email">Email</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter_yor_email">Введите свой Email</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="fio">ФИО</string>
    =

</resources>