<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/action_settings"-->
<!--        android:icon="@drawable/ic_settings"-->
<!--        android:title="@string/settings"-->
<!--        app:showAsAction="ifRoom"/>-->
<!--    <item-->
<!--        android:id="@+id/action_done"-->
<!--        android:icon="@drawable/ic_done"-->
<!--        android:title="@string/done"-->
<!--        app:showAsAction="ifRoom|withText"/>-->

        <item
            android:id="@+id/edit"
            android:icon="@drawable/outline_more_vert_24"
            android:title="@string/edit_profile"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/more_vert"
            android:icon="@drawable/outline_more_vert_24"
            android:title="@string/sign_out"
            app:showAsAction="never"/>
        <item
            android:id="@+id/call"
            android:icon="@android:drawable/ic_menu_call"
            android:orderInCategory="200"
            android:title="@string/call"
            app:showAsAction="always"/>

<!--        <item-->
<!--            android:id="@+id/more_vert"-->
<!--            android:icon="@drawable/outline_more_vert_24"-->
<!--            android:title="@string/more_vert"-->
<!--            />-->
</menu>
