<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.PassRecoveryActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery"
        android:textStyle="bold"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:textSize="24sp"/>

<!--    <ImageView-->
<!--        android:id="@+id/imageView1"-->
<!--        android:layout_width="163dp"-->
<!--        android:layout_height="207dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.1"-->
<!--        app:srcCompat="@drawable/auth" />-->

    <EditText
        android:id="@+id/enterYourEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/enter_yor_email"
        android:textAlignment="center"
        android:fontFamily="@font/noto_sans"
        android:textStyle="bold"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        />

    <Button
        android:id="@+id/btReestablish"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/reestablish"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        android:onClick="onClickBtReestablish"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

<!--    <Button-->
<!--        android:id="@+id/btAuthPage"-->
<!--        android:layout_width="255dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:fontFamily="@font/noto_sans"-->
<!--        android:text="@string/auth"-->
<!--        android:onClick="onClickBtAuthPage"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="16sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:cornerRadius="15dp" />-->

</LinearLayout>